--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,8 +1,13 @@
 @charset 'utf-8';
 
+@import 'fonts';
+
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
+
+
+@import 'main';
 
 @include foundation-global-styles;
 // @include foundation-grid;
